css/home.css
html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box;  box-sizing: border-box; }
*, *:before, *:after { -webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit; }
.jumbotron:hover {background-color: rgb(195, 255, 252); transform: scale(1.05); transition: 0.3s;}
.nav { flex-wrap: nowrap; }
.nav-tabs {padding: 0 5px 10px 5px;}
.nav-item .active { background-color: #bebebe !important; color: #000000; border-radius: 6px;}
.nav a { text-decoration: none;}
.nav-version-link{float: right;}
@media (max-width: 390px) { .nav-deactivate { display: none;}}
@media (max-width: 576px) { .nav-deactivate { display: none;}}
@media (min-width: 768px) { .nav-username {display: none;}}
@media (max-width: 992px) { .nav-version-link{float: left;}}
@media (max-width: 1200px){}

.container-fluid {
    padding-right: 2%!important;
      padding-left: 2%!important;}

.draggable {
  -webkit-app-region: drag;
}
.spinner {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 50px;
  height: 50px;
  margin: -25px 0 0 -25px;
  border: 5px solid rgba(0, 0, 0, 0.1);
  border-top: 5px solid #000;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}
::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    background: rgb(248, 248, 248);
}

::-webkit-scrollbar-track {
    background: #ffffff00;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background: rgb(112, 112, 112);
    border-radius: 10px;
    border: 4px solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
}

::-webkit-scrollbar-thumb:hover {
    background: rgb(126, 126, 126);
    border: 1px solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
}

/* Buttons */
::-webkit-scrollbar-button:single-button {
  display: block;
  border-style: solid;  
  border-radius: 15px;
  height: 5px;
  width: 5px;
}
/* Up */
::-webkit-scrollbar-button:single-button:vertical:decrement {
  border-width: 0 5px 5px 5px;
  border-radius: 5px;
  border-color: transparent transparent #a7a7a7 transparent;
  background-clip: padding-box;
}

/* Down */
::-webkit-scrollbar-button:single-button:vertical:increment {
  border-width: 5px 5px 0 5px;
  border-radius: 5px;
  border-color: #a7a7a7 transparent transparent transparent;
  background-clip: padding-box;
}


/* Button on scrollbar--horizontal scrollbar to left*/
::-webkit-scrollbar-button:single-button:horizontal:decrement {
  border-width: 5px 5px 5px 0;
  border-radius: 5px;
  border-color: transparent #a7a7a7 transparent transparent;
  background-clip: padding-box;
}

/* Button on scrollbar--horizontal scrollbar to right*/
::-webkit-scrollbar-button:single-button:horizontal:increment {
  border-width: 5px 0 5px 5px;
  border-radius: 5px;
  border-color: transparent transparent transparent #a7a7a7;
  background-clip: padding-box;
}

